--- a/fixture/mamis.html
+++ b/fixture/mamis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados Primera - Mundo Hockey</title>
+    <title>Resultados Mamis - Hockey league </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <i class="fas fa-hockey-puck"></i>
-                MUNDO HOCKEY
+                <img src="../img/logo.png" alt="Hockey League">
+                    HOCKEY LEAGUE
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -153,7 +153,7 @@
                 <div class="breadcrumb-nav">
                     <a href="../index.html"><i class="fas fa-home"></i> Inicio</a>
                     <i class="fas fa-chevron-right"></i>
-                    <span class="current">Resultados Primera</span>
+                    <span class="current">Resultados Mamis</span>
                 </div>
             </div>
 
@@ -164,7 +164,7 @@
             </a>
 
             <!-- Page Title -->
-            <h1 class="page-title">Resultados Primera</h1>
+            <h1 class="page-title">Resultados Mamis</h1>
 
             <!---------- Fecha 1 ----------->
             <div class="fecha-section" id="fecha1">
@@ -182,9 +182,9 @@
                             </div>
                         </div>
                         <div class="resultado-container">
-                            <div class="resultado-score"></div>
+                            <div class="resultado-score">5</div>
                             <div class="resultado-separador">-</div>
-                            <div class="resultado-score"></div>
+                            <div class="resultado-score">1</div>
                         </div>
                         <div class="partido-info">
                             <div class="partido-fecha">15 de Julio, 2025</div>
@@ -205,9 +205,9 @@
                             </div>
                         </div>
                         <div class="resultado-container">
-                            <div class="resultado-score"></div>
+                            <div class="resultado-score">3</div>
                             <div class="resultado-separador">-</div>
-                            <div class="resultado-score"></div>
+                            <div class="resultado-score">2</div>
                         </div>
                         <div class="partido-info">
                             <div class="partido-fecha">15 de Julio, 2025</div>
@@ -228,9 +228,9 @@
                             </div>
                         </div>
                         <div class="resultado-container">
-                            <div class="resultado-score"></div>
+                            <div class="resultado-score">1</div>
                             <div class="resultado-separador">-</div>
-                            <div class="resultado-score"></div>
+                            <div class="resultado-score">0</div>
                         </div>
                         <div class="partido-info">
                             <div class="partido-fecha">15 de Julio, 2025</div>
