--- a/fixture/octava.html
+++ b/fixture/octava.html
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <i class="fas fa-hockey-puck"></i>
-                MUNDO HOCKEY
+                <img src="../img/logo.png" alt="Hockey League">
+                    HOCKEY LEAGUE
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
