--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
                             <li><a class="dropdown-item" href="fixture/torneo_noviembre.html">
                                 <i class="fas fa-trophy me-2"></i>Torneo Noviembre 2025
                             </a></li>
-                            <li><a class="dropdown-item" href="404.html">
+                            <li><a class="dropdown-item" href="proximamente.html">
                                 <i class="fas fa-heart me-2"></i>Proximamente..
                             </a></li>
-                            <li><a class="dropdown-item" href="404.html
-                                ">
+                            <li><a class="dropdown-item" href="proximamente.html">
                                 <i class="fas fa-medal me-2"></i>Proximamente..
                             </a></li>
                         </ul>
@@ -56,10 +55,10 @@
                             <li><a class="dropdown-item" href="fixture/torneo_noviembre.html">
                                     <i class="fas fa-trophy me-2"></i>Torneo Noviembre 2025
                                 </a></li>
-                                <li><a class="dropdown-item" href="404.html">
+                                <li><a class="dropdown-item" href="proximamente.html">
                                 <i class="fas fa-heart me-2"></i>Proximamente..
                             </a></li>
-                            <li><a class="dropdown-item" href="404.html">
+                            <li><a class="dropdown-item" href="proximamente.html">
                                 <i class="fas fa-medal me-2"></i>Proximamente..
                             </a></li>
                         </ul>
@@ -129,11 +128,11 @@
             <div class="category-grid">
                 <div class="category-card">
                     <div class="category-name">Primera</div>
-                    <div class="category-info">Categoría principal</div>
+                    <div class="category-info">Categoría 1ra</div>
                 </div>
                 <div class="category-card">
                     <div class="category-name">Mamis</div>
-                    <div class="category-info">Categoría femenina</div>
+                    <div class="category-info">Categoría Mamis</div>
                 </div>
                 <div class="category-card">
                     <div class="category-name">Quinta</div>
@@ -157,7 +156,7 @@
                 </div>
                 <div class="category-card">
                     <div class="category-name">Mixto</div>
-                    <div class="category-info">Categoría mixta</div>
+                    <div class="category-info">Categoría mixto</div>
                 </div>
             </div>
         </div>
@@ -176,49 +175,49 @@
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-6 col-md-4">
-                            <a href="fixture/primera.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-trophy"></i>
                                 <span>Primera</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-heart"></i>
                                 <span>Mamis</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-medal"></i>
                                 <span>Quinta</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-medal"></i>
                                 <span>Sexta</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-medal"></i>
                                 <span>Séptima</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-medal"></i>
                                 <span>Octava</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-medal"></i>
                                 <span>Novena</span>
                             </a>
                         </div>
                         <div class="col-6 col-md-4">
-                            <a href="404.html" class="category-modal-card">
+                            <a href="proximamente.html" class="category-modal-card">
                                 <i class="fas fa-users"></i>
                                 <span>Mixto</span>
                             </a>
