--- a/proximamente.html
+++ b/proximamente.html
@@ -6,6 +6,7 @@
     <title>Próximamente - Hockey League</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
         * {
             margin: 0;
@@ -209,7 +210,14 @@
         <p class="subtitle" style="margin-bottom: 0;">
             Estamos trabajando para traerte la mejor experiencia
         </p>
-
+        <!-- Agrega esto donde quieras el botón -->
+<div style="text-align: center; margin: 2rem 0;">
+    <a href="index.html" class="back-button">
+        <i class="fas fa-home"></i>
+        Volver al Inicio
+    </a>
+</div>
+        
         <!-- Footer -->
         <div class="footer">
             <p class="footer-text">Una creación de</p>
@@ -219,5 +227,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
