--- a/fixture/torneo_noviembre.html
+++ b/fixture/torneo_noviembre.html
@@ -9,6 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E3CR4704D8');
+</script>
 </head>
 <body>
     <!-- Navigation -->
@@ -603,9 +612,73 @@
     
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Hockey League zona oeste. Todos los derechos reservados.</p>
-            <p><i class="fas fa-hockey-puck me-2"></i>Torneo de Hockey - Temporada 2025</p>
+        <div class="footer-container">
+            <!-- Grid principal -->
+            <div class="footer-grid">
+                <!-- Sección 1: Logo y descripción -->
+                <div class="footer-section footer-logo-section">
+                    <div class="footer-brand">
+                        <i class="fas fa-hockey-puck"></i>
+                        <span>Hockey League</span>
+                    </div>
+                    <p class="footer-description">
+                        La liga de hockey más emocionante de la Zona Oeste. 
+                        Pasión, deporte y competencia en cada partido.
+                    </p>
+                    <!-- Redes Sociales -->
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/hockeyleaguee/" class="social-link instagram" target="_blank" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://wa.me/5491112345678" class="social-link whatsapp" target="_blank" aria-label="WhatsApp">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        </a>
+                        <a href="https://tiktok.com" class="social-link tiktok" target="_blank" aria-label="TikTok">
+                            <i class="fab fa-tiktok"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Sección 2: Enlaces rápidos -->
+                <div class="footer-section">
+                    <h3 class="footer-title">Enlaces Rápidos</h3>
+                    <ul class="footer-links">
+                        <li><a href="../index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                        <li><a href="torneo_noviembre.html"><i class="fas fa-users"></i> Torneo Noviembre</a></li>
+                        <li><a href="../info/reglamento.html"><i class="fas fa-book"></i> Reglamento</a></li>
+                    </ul>
+                </div>
+
+                <!-- Sección 3: Contacto -->
+                <div class="footer-section">
+                    <h3 class="footer-title">Contacto</h3>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Zona Oeste, Buenos Aires, Argentina</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:Hockeyleaguezonaoeste@gmail.com">Hockeyleaguezonaoeste@gmail.com</a>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <a href="tel:+5491122931424">+54 9 11 2293-1424</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Divisor -->
+            <div class="footer-divider"></div>
+
+            <!-- Footer bottom -->
+            <div class="footer-bottom">
+                <p>
+                    &copy; 2025 Hockey League Zona Oeste. Todos los derechos reservados.
+                </p>
+            </div>
         </div>
     </footer>
 </body>
