--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hockey League Zona Oeste - Torneo 2025</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Hockey League Zona Oeste - Torneo 2025</title>
+  <meta name="description" content="Fixture, resultados en vivo, posiciones y categorías del torneo de hockey zona oeste.">
+  <meta name="keywords" content="hockey, zona oeste, torneo, resultados, fixture, liga, césped, mamis, primera, menores,Hockey league zona oeste">
+  <meta name="author" content="Nahuel Ignacio Moreno Bauer">
+  
+  <meta property="og:title" content="Hockey League Zona Oeste">
+  <meta property="og:description" content="Toda la información del torneo 2025.">
+  <meta property="og:url" content="https://hockeyleaguezonaoeste.com">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon opcional -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- Fuentes y estilos -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E3CR4704D8');
+</script>
+<script type="text/javascript">
+              window.onload = function(){
+              (function(d, script) {
+              script = d.createElement('script');
+              script.type = 'text/javascript';
+              script.async = true;
+              script.src = 'https://w.app/widget-v1/OLnCqA.js';
+              d.getElementsByTagName('head')[0].appendChild(script);
+              }(document));
+              };
+              </script>
 </head>
+
 <body>
+    
     <!-- Floating background elementos -->
     <div class="floating-element"></div>
     <div class="floating-element"></div>
@@ -19,7 +57,7 @@
     <!-- Navegacion -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/logo.png" alt="Hockey League">
                     HOCKEY LEAGUE
             </a>
@@ -63,11 +101,15 @@
                             </a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/info/reglamento.html">
+                            <i class="fas fa-book me-1"></i>Reglamento
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <!-- Hero Section -->
     <section id="inicio" class="hero-section" style="padding-top: 180px;">
         <div class="container">
@@ -228,11 +270,76 @@
         </div>
     </div>
 
-    <!-- Footer -->
+    
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Hockey League zona oeste. Todos los derechos reservados.</p>
-            <p><i class="fas fa-hockey-puck me-2"></i>Torneo de Hockey - Temporada 2025</p>
+        <div class="footer-container">
+            <!-- Grid principal -->
+            <div class="footer-grid">
+                <!-- Sección 1: Logo y descripción -->
+                <div class="footer-section footer-logo-section">
+                    <div class="footer-brand">
+                        <i class="fas fa-hockey-puck"></i>
+                        <span>Hockey League</span>
+                    </div>
+                    <p class="footer-description">
+                        La liga de hockey más emocionante de la Zona Oeste. 
+                        Pasión, deporte y competencia en cada partido.
+                    </p>
+                    <!-- Redes Sociales -->
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/hockeyleaguee/" class="social-link instagram" target="_blank" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        </a>
+                        <a href="https://wa.me/5491112345678" class="social-link whatsapp" target="_blank" aria-label="WhatsApp">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        </a>
+                        <a href="https://tiktok.com" class="social-link tiktok" target="_blank" aria-label="TikTok">
+                            <i class="fab fa-tiktok"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Sección 2: Enlaces rápidos -->
+                <div class="footer-section">
+                    <h3 class="footer-title">Enlaces Rápidos</h3>
+                    <ul class="footer-links">
+                        <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                        <li><a href="fixture/torneo_noviembre.html"><i class="fas fa-users"></i> Torneo Noviembre</a></li>
+                        <li><a href="info/reglamento.html"><i class="fas fa-book"></i> Reglamento</a></li>
+                    </ul>
+                </div>
+
+                <!-- Sección 3: Contacto -->
+                <div class="footer-section">
+                    <h3 class="footer-title">Contacto</h3>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Zona Oeste, Buenos Aires, Argentina</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:Hockeyleaguezonaoeste@gmail.com">Hockeyleaguezonaoeste@gmail.com</a>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <a href="tel:++54 9 11 6022-0376">+54 9 11 6022-0376</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Divisor -->
+            <div class="footer-divider"></div>
+
+            <!-- Footer bottom -->
+            <div class="footer-bottom">
+                <p>
+                    &copy; 2025 Hockey League Zona Oeste. Todos los derechos reservados.
+                </p>
+            </div>
         </div>
     </footer>
 </body>
