--- a/proximamente.html
+++ b/proximamente.html
@@ -183,6 +183,15 @@
             }
         }
     </style>
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E3CR4704D8');
+</script>
 </head>
 <body>
     <!-- Elementos flotantes -->
