--- a/index.html
+++ b/index.html
@@ -5,48 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Hockey League Zona Oeste - Torneo 2025</title>
-  <meta name="description" content="Fixture, resultados en vivo, posiciones y categorías del torneo de hockey zona oeste.">
-  <meta name="keywords" content="hockey, zona oeste, torneo, resultados, fixture, liga, césped, mamis, primera, menores,Hockey league zona oeste">
-  <meta name="author" content="Nahuel Ignacio Moreno Bauer">
   
-  <meta property="og:title" content="Hockey League Zona Oeste">
-  <meta property="og:description" content="Toda la información del torneo 2025.">
+  <!-- META BÁSICAS -->
+  <meta name="description" content="Fixture, resultados en vivo, posiciones y categorías del Torneo de Hockey Zona Oeste 2025. Seguí todas las fechas y novedades de la liga.">
+  <meta name="keywords" content="hockey, hockey sobre césped, liga, torneo, resultados, fixture, posiciones, zona oeste, mamis, primera, menores, Hockey League Zona Oeste">
+  <meta name="author" content="Nahuel Ignacio Moreno Bauer">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="canonical" href="https://hockeyleaguezonaoeste.com">
+
+  <!-- OPEN GRAPH (para Facebook y redes) -->
+  <meta property="og:title" content="Hockey League Zona Oeste - Torneo 2025">
+  <meta property="og:description" content="Fixture, resultados en vivo y posiciones del torneo de hockey más emocionante de la Zona Oeste.">
+  <meta property="og:image" content="https://hockeyleaguezonaoeste.com/img/logo.png">
   <meta property="og:url" content="https://hockeyleaguezonaoeste.com">
   <meta property="og:type" content="website">
+  <meta property="og:locale" content="es_AR">
 
-  <!-- Favicon opcional -->
+  <!-- TWITTER CARDS -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Hockey League Zona Oeste - Torneo 2025">
+  <meta name="twitter:description" content="Fixture, resultados y posiciones del torneo 2025 de la Hockey League Zona Oeste.">
+  <meta name="twitter:image" content="https://hockeyleaguezonaoeste.com/img/logo.png">
+
+  <!-- FAVICON -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <!-- Fuentes y estilos -->
+  <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- FUENTES Y ICONOS -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
-  gtag('config', 'G-E3CR4704D8');
-</script>
-<script type="text/javascript">
-              window.onload = function(){
-              (function(d, script) {
-              script = d.createElement('script');
-              script.type = 'text/javascript';
-              script.async = true;
-              script.src = 'https://w.app/widget-v1/OLnCqA.js';
-              d.getElementsByTagName('head')[0].appendChild(script);
-              }(document));
-              };
-              </script>
+  <!-- ESTILOS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- GOOGLE ANALYTICS -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-E3CR4704D8');
+  </script>
+
+  <!-- WIDGET DE WHATSAPP -->
+  <script type="text/javascript">
+    window.onload = function(){
+      (function(d, script) {
+        script = d.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src = 'https://w.app/widget-v1/OLnCqA.js';
+        d.getElementsByTagName('head')[0].appendChild(script);
+      }(document));
+    };
+  </script>
 </head>
-
 <body>
     
     <!-- Floating background elementos -->
