--- a/fixture/primera.html
+++ b/fixture/primera.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados Primera - Mundo Hockey</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
-     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Primera – Hockey League Zona Oeste | Torneo 2025</title>
 
-  gtag('config', 'G-E3CR4704D8');
-</script>
+  <meta name="description" content="Resultados, fixture y posiciones de la categoría Primera del Torneo 2025 de la Hockey League Zona Oeste.">
+  <meta name="keywords" content="hockey, liga, torneo, zona oeste, primera, hockey femenino, resultados, fixture, posiciones, Hockey League Zona Oeste">
+  <meta name="author" content="Nahuel Ignacio Moreno Bauer">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="canonical" href="https://hockeyleaguezonaoeste.com/fixture/primera.html">
+
+  <meta property="og:title" content="Primera – Hockey League Zona Oeste | Torneo 2025">
+  <meta property="og:description" content="Consultá resultados, fixture y tabla de posiciones de la categoría Primera del torneo 2025.">
+  <meta property="og:image" content="https://hockeyleaguezonaoeste.com/img/logo.png">
+  <meta property="og:url" content="https://hockeyleaguezonaoeste.com/fixture/primera.html">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="es_AR">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Primera – Hockey League Zona Oeste | Torneo 2025">
+  <meta name="twitter:description" content="Fixture, resultados y posiciones de la categoría Primera.">
+  <meta name="twitter:image" content="https://hockeyleaguezonaoeste.com/img/logo.png">
+
+  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -2784,5 +2794,75 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Grid principal -->
+            <div class="footer-grid">
+                <!-- Sección 1: Logo y descripción -->
+                <div class="footer-section footer-logo-section">
+                    <div class="footer-brand">
+                        <i class="fas fa-hockey-puck"></i>
+                        <span>Hockey League</span>
+                    </div>
+                    <p class="footer-description">
+                        La liga de hockey más emocionante de la Zona Oeste. 
+                        Pasión, deporte y competencia en cada partido.
+                    </p>
+                    <!-- Redes Sociales -->
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/hockeyleaguee/" class="social-link instagram" target="_blank" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://wa.me/5491160220376" class="social-link whatsapp" target="_blank" aria-label="WhatsApp">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        </a>
+                        <a href="https://tiktok.com" class="social-link tiktok" target="_blank" aria-label="TikTok">
+                            <i class="fab fa-tiktok"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Sección 2: Enlaces rápidos -->
+                <div class="footer-section">
+                    <h3 class="footer-title">Enlaces Rápidos</h3>
+                    <ul class="footer-links">
+                        <li><a href="../index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                        <li><a href="torneo_noviembre.html"><i class="fas fa-users"></i> Torneo Noviembre</a></li>
+                        <li><a href="../info/reglamento.html"><i class="fas fa-book"></i> Reglamento</a></li>
+                    </ul>
+                </div>
+
+                <!-- Sección 3: Contacto -->
+                <div class="footer-section">
+                    <h3 class="footer-title">Contacto</h3>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Zona Oeste, Buenos Aires, Argentina</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:Hockeyleaguezonaoeste@gmail.com">Hockeyleaguezonaoeste@gmail.com</a>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <a href="tel:+5491122931424">+54 9 11 6022-0376</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Divisor -->
+            <div class="footer-divider"></div>
+
+            <!-- Footer bottom -->
+            <div class="footer-bottom">
+                <p>
+                    &copy; 2025 Hockey League Zona Oeste. Todos los derechos reservados.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
