--- a/fixture/torneo_noviembre.html
+++ b/fixture/torneo_noviembre.html
@@ -3,21 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados Toreno Noviembre - Hockey league </title>
+    <title>Resultados Torneo Noviembre - Hockey League</title>
+
+    <!-- META BÁSICAS -->
+    <meta name="author" content="Hockey League Zona Oeste">
+    <meta name="description" content="Resultados, posiciones, fixture y fases finales del Torneo Noviembre de la Hockey League Zona Oeste.">
+    <meta name="keywords" content="hockey, hockey sobre césped, liga de hockey, torneo, resultados, fixture, zona oeste, clubes de hockey, Buenos Aires">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="canonical" href="https://hockeyleaguezonaoeste.com/fixture/torneo_noviembre.html">
+
+    <!-- META OPEN GRAPH (para redes sociales) -->
+    <meta property="og:title" content="Resultados Torneo Noviembre - Hockey League Zona Oeste">
+    <meta property="og:description" content="Consultá los resultados, posiciones y fases finales del Torneo Noviembre de la Hockey League Zona Oeste.">
+    <meta property="og:image" content="https://hockeyleaguezonaoeste.com/img/logo.png">
+    <meta property="og:url" content="https://hockeyleaguezonaoeste.com/fixture/torneo_noviembre.html">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="es_AR">
+
+    <!-- META TWITTER -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Resultados Torneo Noviembre - Hockey League Zona Oeste">
+    <meta name="twitter:description" content="Resultados y fixture del Torneo Noviembre de la Hockey League Zona Oeste.">
+    <meta name="twitter:image" content="https://hockeyleaguezonaoeste.com/img/logo.png">
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- FUENTES Y ICONOS -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
-     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-E3CR4704D8');
-</script>
+    <!-- ESTILOS -->
+    <link rel="stylesheet" href="../style.css">
+
+    <!-- GOOGLE ANALYTICS -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E3CR4704D8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-E3CR4704D8');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -630,7 +662,7 @@
                         <a href="https://www.instagram.com/hockeyleaguee/" class="social-link instagram" target="_blank" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/5491112345678" class="social-link whatsapp" target="_blank" aria-label="WhatsApp">
+                        <a href="https://wa.me/5491160220376" class="social-link whatsapp" target="_blank" aria-label="WhatsApp">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                         </a>
@@ -664,7 +696,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+5491122931424">+54 9 11 2293-1424</a>
+                            <a href="tel:+5491122931424">+54 9 11 6022-0376</a>
                         </div>
                     </div>
                 </div>
